[GRoup/Create] Implement API to create Group for an auth user. Add helper to list all application roles.
